--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 					<hr>
 					<h4><strong>TAMTCHOUM KAMGUEM</strong></h4>
 					<h5>Edwin Léonce</h5>
-					<h5><p style="color: blue"><strong>Ingénieur des Travaux en Informatique et Télécommunications</strong></p></h5>
+					<h5><p style="color: blue"><strong>Ingénieur en Conception, Architecture Réseaux et Cybersécurité</strong></p></h5>
 					<h7><p style="color: rgb(215, 125, 237)"><strong>Actuellement étudiant en Master à SUP’PTIC Yaoundé</strong></p></h7>
 				
 				</div>
